--- a/template/page/upload.html
+++ b/template/page/upload.html
@@ -9,8 +9,8 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="format-detection" content="telephone=no">
-    <link rel="icon" href="../../favicon.ico">
-    <link rel="stylesheet" href="../../assets/css/main.css?02">
+    <link rel="icon" href="./favicon.ico">
+    <link rel="stylesheet" href="/static/assets/css/main.css?02">
 </head>
 <body>
 
@@ -80,12 +80,12 @@
     </div>
 
 </div>
-<script type="text/javascript" src="../js/libs/jquery.min.js"></script>
-<script type="text/javascript" src="../js/libs/layui/layui.js?1"></script>
-<script type="text/javascript" src="../js/libs/vue/vue.min.js"></script>
-<script type="text/javascript" src="../js/main.js"></script>
-<script type="text/javascript" src="../js/utils.js"></script>
-<script type="text/javascript" src="../js/sync.js?01"></script>
+<script type="text/javascript" src="/static/js/libs/jquery.min.js"></script>
+<script type="text/javascript" src="/static/js/libs/layui/layui.js?1"></script>
+<script type="text/javascript" src="/static/js/libs/vue/vue.min.js"></script>
+<script type="text/javascript" src="/static/js/main.js"></script>
+<script type="text/javascript" src="/static/js/utils.js"></script>
+<script type="text/javascript" src="/static/js/sync.js?01"></script>
 <script>
     var APP = new Vue({
         el: '#app',
