--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -1,5 +1,5 @@
 @charset "utf-8";
-@import url(../../js/libs/layui/css/layui.css);
+@import url(/static/js/libs/layui/css/layui.css);
 @font-face {
     font-family: 'iconfont';
     src: url('../fonts/iconfont.eot');
