--- a/template/page/qrcode.html
+++ b/template/page/qrcode.html
@@ -19,6 +19,7 @@
 <script type="text/javascript">
     window.onload=function () {
         var ip=args('f');
+        var path = getQueryVariable("path")
         if(ip){
             document.getElementById('text').value="http://"+ip;
             document.getElementById('text').style.display="";
@@ -29,6 +30,7 @@
                 type: "GET",
                 url: "/api/sip",
                 dataType: "json",
+                data: {"path": path},
                 success: function(rs){
                     setTextValue(rs.ip);
                     makeCode();
@@ -37,6 +39,16 @@
         }
         // makeCode();
     };
+    function getQueryVariable(variable)
+    {
+        var query = window.location.search.substring(1);
+        var vars = query.split("&");
+        for (var i=0;i<vars.length;i++) {
+                var pair = vars[i].split("=");
+                if(pair[0] == variable){return pair[1];}
+        }
+        return(false);
+    }
 
     function setTextValue(v){
         // document.getElementById('text').value="http://"+v;
