--- a/template/page/upload.html
+++ b/template/page/upload.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="zh-cn">
 <head>
     <meta charset="UTF-8">
@@ -10,7 +9,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="format-detection" content="telephone=no">
     <link rel="icon" href="./favicon.ico">
-    <link rel="stylesheet" href="/static/assets/css/main.css?02">
+    <link rel="stylesheet" href="/static/css/main.css">
 </head>
 <body>
 
@@ -19,7 +18,6 @@
     <div class="layui-tab">
         <ul class="layui-tab-title" style="text-align: center">
             <li class="layui-this">上传文件</li>
-            <li>传输文本</li>
         </ul>
         <div class="layui-tab-content">
             <div class="layui-tab-item layui-show">
@@ -28,13 +26,9 @@
                 <div class="layui-row" id="tzUpload">
                     <fieldset class="layui-elem-field">
                         <div class="layui-field-box" style="text-align: center">
-                            <div class="layui-panel-window" style="width: 65%;margin: 0 auto;">
-                                <label>/<input  v-model="path_sub" type="text" id="path_sub" style="width:50%" placeholder="自定义上传子目录" />/
-                                </label>
-                            </div>
                             <div class="layui-upload-drag" id="upload-file" style="width: 60%;">
                                 <i class="layui-icon "></i>
-                                <p>{{progress}}<br><br></p>
+                                <p>0<br><br></p>
                                 <div v-if="progress_show" class="layui-progress layui-progress-big" lay-showpercent="true" lay-filter="upload_pc">
                                     <div class="layui-progress-bar layui-bg-orange" lay-percent="0%"></div>
                                 </div>
@@ -52,40 +46,16 @@
                 </div>
 
             </div>
-            <div class="layui-tab-item">
-                <!--Tab2-->
-
-                <div class="layui-row" >
-                    <fieldset class="layui-elem-field">
-                        <div class="layui-field-box" style="text-align: center">
-                            <div class="" style="margin: 0 auto;">
-                                <label>
-                                    <textarea  v-model="data_text" @mouseout="setDataText()" type="text" id="data_text" style="width:100%;height:300px;" ></textarea>
-                                </label>
-                                <!--<button @click="setDataText()"> 提交 </button>-->
-                            </div>
-                        </div>
-                    </fieldset>
-
-                    <fieldset class="layui-elem-field">
-                        <legend style="font-size:11px;text-align: center">使用说明</legend>
-                        <div class="layui-field-box text-center">
-                            <p class="text-small ">粘贴文本，多端共享，自动保存</p>
-                        </div>
-                    </fieldset>
-                </div>
-            </div>
 
         </div>
     </div>
 
 </div>
 <script type="text/javascript" src="/static/js/libs/jquery.min.js"></script>
-<script type="text/javascript" src="/static/js/libs/layui/layui.js?1"></script>
+<script type="text/javascript" src="/static/js/libs/layui/layui.js"></script>
 <script type="text/javascript" src="/static/js/libs/vue/vue.min.js"></script>
 <script type="text/javascript" src="/static/js/main.js"></script>
 <script type="text/javascript" src="/static/js/utils.js"></script>
-<script type="text/javascript" src="/static/js/sync.js?01"></script>
 <script>
     var APP = new Vue({
         el: '#app',
