--- a/template/page/upload.html
+++ b/template/page/upload.html
@@ -38,7 +38,7 @@
                     <fieldset class="layui-elem-field">
                         <legend style="font-size:11px;text-align: center">支持上传大文件|多选|拖拽</legend>
                         <div class="layui-field-box text-center">
-                            <p class="text-small ">只需与B0Pass使用同一WIFI</p>
+                            <p class="text-small ">必须与qrcp_pass使用同一WIFI</p>
                             <p class="text-small ">充分发挥局域网最大带宽上传</p>
                             <p class="text-small ">多文件上传请用非微信浏览器</p>
                         </div>
